tests/builds/pass/constructor_decl.cpl
struct MyStruct {
	int a;
	int b;

	MyStruct(int c, int d) {
		a = c;
		b = d;
	}
};

struct YourStruct extends MyStruct {
	int t;
	int v;
};

int main() {
	struct YourStruct *n;

	n = make MyStruct(1, 2);
	return n.a;
}
